--- a/TukuiAddOnManagerEnhanced/TukuiAddOnManagerEnhanced.csproj
+++ b/TukuiAddOnManagerEnhanced/TukuiAddOnManagerEnhanced.csproj
@@ -144,6 +144,10 @@
     <Resource Include="Assests\Artwork\SubSubMenuButton-Left%28Premium%29.png" />
     <Resource Include="Assests\Artwork\SubSubMenuButton-Right%28Premium%29.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assests\Artwork\LoginRibbonOverflow%28Left%29.png" />
+    <Resource Include="Assests\Artwork\LoginRibbonOverflow%28Right%29.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
