--- a/TukuiAddOnManagerEnhanced/TukuiAddOnManagerEnhanced.csproj
+++ b/TukuiAddOnManagerEnhanced/TukuiAddOnManagerEnhanced.csproj
@@ -83,6 +83,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Styles\Colors.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\DataGrid.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Utilities\NativeMethods.cs" />
@@ -150,6 +158,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assests\Artwork\SearchIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assests\Artwork\logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
